deploy-spring-boot-lab2

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,15 @@ apply plugin: 'org.springframework.boot'
 repositories {
     mavenCentral()
 }
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello from build.gradle",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
