--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
     routes:
-      - route: pal-tracker-kt-vn.api.sys.pcf.paltraining.perficient.com
+      - route: pal-tracker-kt-vn.apps.pcf.paltraining.perficient.com
     env:
       WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
